include/bison_c.h


typedef struct bison_handle_* bison_handle;
typedef uint32_t bison_hash;
typedef enum bison_error {
  BISON_OK = 0, 
  BISON_ERR_NULL = -1, 
  BISON_ERR_TYPE = -2, 
  BISON_ERR_NOT_FOUND = -3, 
  BISON_ERR_DUPLICATE = -4, 
  BISON_ERR_EXCEPTION = -5, 
  BISON_ERR_PARSE = -6, 
} bison_error;
BISON_API bison_hash bison_key(const char* name);