include/rmi_c.h


typedef struct rmi_client_handle_* rmi_client_handle;
typedef struct rmi_server_handle_* rmi_server_handle;
typedef struct rmi_proxy_handle_* rmi_proxy_handle;
typedef struct rmi_future_handle_* rmi_future_handle;
typedef enum rmi_error {
  RMI_OK = 0, 
  RMI_ERR_NULL = -1, 
  RMI_ERR_INVALID_STATE = -2, 
  RMI_ERR_TIMEOUT = -3, 
  RMI_ERR_REMOTE_EXCEPTION = -4, 
  RMI_ERR_TRANSPORT = -5, 
  RMI_ERR_EXCEPTION = -6, 
} rmi_error;
RMI_API rmi_error rmi_future_wait(rmi_future_handle future, int64_t timeout_ms);
RMI_API rmi_error rmi_future_get_dynamic(rmi_future_handle* future, bison_handle* out_value);
RMI_API rmi_error rmi_future_get_proxy(rmi_future_handle* future, rmi_proxy_handle* out_proxy);
RMI_API void rmi_future_release(rmi_future_handle future);
RMI_API rmi_client_handle rmi_client_tcp_create(const char* host, uint16_t port);
RMI_API rmi_client_handle rmi_client_tls_create(const char* host, uint16_t port);
RMI_API rmi_client_handle rmi_client_pipe_create(const char* path);
RMI_API rmi_client_handle rmi_client_term_create(void);
RMI_API rmi_client_handle rmi_standalone_create(void);
RMI_API rmi_error rmi_client_connect(rmi_client_handle client, bison_handle params);
RMI_API rmi_error
rmi_client_describe(rmi_client_handle client, bison_hash ns, bison_hash klass, bison_handle* out_desc);
RMI_API rmi_error
rmi_client_describe_async(rmi_client_handle client, bison_hash ns, bison_hash klass, rmi_future_handle* out_future);
RMI_API rmi_error rmi_client_instantiate(
    rmi_client_handle client,
    bison_hash ns,
    bison_hash klass,
    bison_handle params,
    rmi_proxy_handle* out_proxy);
RMI_API rmi_error rmi_client_instantiate_async(
    rmi_client_handle client,
    bison_hash ns,
    bison_hash klass,
    bison_handle params,
    rmi_future_handle* out_future);
RMI_API rmi_error rmi_client_disconnect(rmi_client_handle client);
RMI_API void rmi_client_release(rmi_client_handle client);
RMI_API void rmi_proxy_release(rmi_proxy_handle proxy);
typedef void (*rmi_proxy_event_fn)(bison_handle params, void* user);
RMI_API rmi_error
rmi_proxy_on_event(rmi_proxy_handle proxy, bison_hash event_name, rmi_proxy_event_fn handler, void* user);
RMI_API rmi_error rmi_proxy_clear(rmi_proxy_handle proxy, int64_t timeout_ms);
RMI_API rmi_error rmi_proxy_clear_async(rmi_proxy_handle proxy, rmi_future_handle* out_future);
RMI_API rmi_error rmi_proxy_set(rmi_proxy_handle proxy, bison_handle fields, int64_t timeout_ms);
RMI_API rmi_error rmi_proxy_set_async(rmi_proxy_handle proxy, bison_handle fields, rmi_future_handle* out_future);
RMI_API rmi_error
rmi_proxy_get(rmi_proxy_handle proxy, bison_handle projection, bison_handle* out_result, int64_t timeout_ms);
RMI_API rmi_error rmi_proxy_get_async(rmi_proxy_handle proxy, bison_handle projection, rmi_future_handle* out_future);
RMI_API rmi_error rmi_proxy_call(
    rmi_proxy_handle proxy,
    bison_hash method,
    bison_handle params,
    bison_handle* out_result,
    int64_t timeout_ms);
RMI_API rmi_error
rmi_proxy_call_async(rmi_proxy_handle proxy, bison_hash method, bison_handle params, rmi_future_handle* out_future);
RMI_API rmi_server_handle rmi_server_tcp_create(const char* host, uint16_t port);
RMI_API rmi_server_handle rmi_server_tls_create(const char* host, uint16_t port);
RMI_API rmi_server_handle rmi_server_pipe_create(const char* path);
RMI_API rmi_server_handle rmi_server_term_create(const char* cmd);
typedef bool (*rmi_auth_fn)(bison_handle payload, char* identity_buf, size_t identity_buf_len, void* user);
RMI_API rmi_error
rmi_server_listen(rmi_server_handle server, bison_handle params, rmi_auth_fn auth_handler, void* auth_user);
RMI_API void rmi_server_stop(rmi_server_handle server);
RMI_API void rmi_server_release(rmi_server_handle server);
RMI_API rmi_error rmi_server_enable_profiling(rmi_server_handle server, const char* output_dir);
RMI_API rmi_error rmi_server_start_capture(rmi_server_handle server, const char* label, bool* out_started);
RMI_API rmi_error rmi_server_stop_capture(rmi_server_handle server);
RMI_API rmi_error rmi_server_is_capture_active(rmi_server_handle server, bool* out_active);
RMI_API void rmi_trace_scope_begin(const char* name);
RMI_API void rmi_trace_scope_end(void);
RMI_API void rmi_trace_instant(const char* name);
RMI_API void rmi_trace_counter_int(const char* name, int64_t value);
RMI_API void rmi_trace_counter_double(const char* name, double value);
RMI_API bool rmi_trace_is_active(void);