bindings/rust/src/sys.rs


    pub fn bison_set_vector_bool(
        h: bison_handle,
        name: bison_hash,
        values: *const c_int,
        count: usize,
    ) -> bison_error;
    pub fn bison_set_vector_int(
        h: bison_handle,
        name: bison_hash,
        values: *const i32,
        count: usize,
    ) -> bison_error;
    pub fn bison_set_vector_float(
        h: bison_handle,
        name: bison_hash,
        values: *const f32,
        count: usize,
    ) -> bison_error;
    pub fn bison_set_vector_bytes(
        h: bison_handle,
        name: bison_hash,
        values: *const u8,
        count: usize,
    ) -> bison_error;

    // ── Binary serialization ─────────────────────────────────────────────────

    pub fn bison_serialize(h: bison_handle, out: *mut *mut u8, out_len: *mut usize) -> bison_error;
    pub fn bison_deserialize(data: *const u8, len: usize, out: *mut bison_handle) -> bison_error;
    pub fn bison_free_buffer(buf: *mut u8);

    // ── Utility ──────────────────────────────────────────────────────────────

    pub fn bison_key(name: *const c_char) -> bison_hash;

    // ── rmi_c.h: futures ─────────────────────────────────────────────────────

    pub fn rmi_future_wait(future: rmi_future_handle, timeout_ms: i64) -> rmi_error;
    pub fn rmi_future_get_dynamic(
        future: *mut rmi_future_handle,
        out_value: *mut bison_handle,
    ) -> rmi_error;
    pub fn rmi_future_get_proxy(
        future: *mut rmi_future_handle,
        out_proxy: *mut rmi_proxy_handle,
    ) -> rmi_error;
    pub fn rmi_future_release(future: rmi_future_handle);

    // ── rmi_c.h: client ──────────────────────────────────────────────────────

    pub fn rmi_client_tcp_create(host: *const c_char, port: u16) -> rmi_client_handle;
    pub fn rmi_client_tls_create(host: *const c_char, port: u16) -> rmi_client_handle;
    pub fn rmi_client_pipe_create(path: *const c_char) -> rmi_client_handle;
    pub fn rmi_client_term_create() -> rmi_client_handle;
    pub fn rmi_standalone_create() -> rmi_client_handle;

    pub fn rmi_client_connect(client: rmi_client_handle, params: bison_handle) -> rmi_error;
    pub fn rmi_client_describe(
        client: rmi_client_handle,
        ns: bison_hash,
        klass: bison_hash,
        out_desc: *mut bison_handle,
    ) -> rmi_error;
    pub fn rmi_client_describe_async(
        client: rmi_client_handle,
        ns: bison_hash,
        klass: bison_hash,
        out_future: *mut rmi_future_handle,
    ) -> rmi_error;
    pub fn rmi_client_instantiate(
        client: rmi_client_handle,
        ns: bison_hash,
        klass: bison_hash,
        params: bison_handle,
        out_proxy: *mut rmi_proxy_handle,
    ) -> rmi_error;
    pub fn rmi_client_instantiate_async(
        client: rmi_client_handle,
        ns: bison_hash,
        klass: bison_hash,
        params: bison_handle,
        out_future: *mut rmi_future_handle,
    ) -> rmi_error;
    pub fn rmi_client_disconnect(client: rmi_client_handle) -> rmi_error;
    pub fn rmi_client_release(client: rmi_client_handle);

    // ── rmi_c.h: proxy ───────────────────────────────────────────────────────

    pub fn rmi_proxy_release(proxy: rmi_proxy_handle);
    pub fn rmi_proxy_on_event(
        proxy: rmi_proxy_handle,
        event_name: bison_hash,
        handler: rmi_proxy_event_fn,
        user: *mut c_void,
    ) -> rmi_error;
    pub fn rmi_proxy_clear(proxy: rmi_proxy_handle, timeout_ms: i64) -> rmi_error;
    pub fn rmi_proxy_clear_async(
        proxy: rmi_proxy_handle,
        out_future: *mut rmi_future_handle,
    ) -> rmi_error;
    pub fn rmi_proxy_set(
        proxy: rmi_proxy_handle,
        fields: bison_handle,
        timeout_ms: i64,
    ) -> rmi_error;
    pub fn rmi_proxy_set_async(
        proxy: rmi_proxy_handle,
        fields: bison_handle,
        out_future: *mut rmi_future_handle,
    ) -> rmi_error;
    pub fn rmi_proxy_get(
        proxy: rmi_proxy_handle,
        projection: bison_handle,
        out_result: *mut bison_handle,
        timeout_ms: i64,
    ) -> rmi_error;
    pub fn rmi_proxy_get_async(
        proxy: rmi_proxy_handle,
        projection: bison_handle,
        out_future: *mut rmi_future_handle,
    ) -> rmi_error;
    pub fn rmi_proxy_call(
        proxy: rmi_proxy_handle,
        method: bison_hash,
        params: bison_handle,
        out_result: *mut bison_handle,
        timeout_ms: i64,
    ) -> rmi_error;
    pub fn rmi_proxy_call_async(
        proxy: rmi_proxy_handle,
        method: bison_hash,
        params: bison_handle,
        out_future: *mut rmi_future_handle,
    ) -> rmi_error;

    // ── rmi_c.h: server ──────────────────────────────────────────────────────

    pub fn rmi_server_tcp_create(host: *const c_char, port: u16) -> rmi_server_handle;
    pub fn rmi_server_tls_create(host: *const c_char, port: u16) -> rmi_server_handle;
    pub fn rmi_server_pipe_create(path: *const c_char) -> rmi_server_handle;
    pub fn rmi_server_term_create(cmd: *const c_char) -> rmi_server_handle;

    pub fn rmi_server_listen(
        server: rmi_server_handle,
        params: bison_handle,
        auth_handler: Option<rmi_auth_fn>,
        auth_user: *mut c_void,
    ) -> rmi_error;
    pub fn rmi_server_stop(server: rmi_server_handle);
    pub fn rmi_server_release(server: rmi_server_handle);

    // ── rmi_c.h: profiling ──────────────────────────────────────────────────

    pub fn rmi_server_enable_profiling(
        server: rmi_server_handle,
        output_dir: *const c_char,
    ) -> rmi_error;
    pub fn rmi_server_start_capture(
        server: rmi_server_handle,
        label: *const c_char,
        out_started: *mut bool,
    ) -> rmi_error;
    pub fn rmi_server_stop_capture(server: rmi_server_handle) -> rmi_error;
    pub fn rmi_server_is_capture_active(
        server: rmi_server_handle,
        out_active: *mut bool,
    ) -> rmi_error;

    pub fn rmi_trace_scope_begin(name: *const c_char);
    pub fn rmi_trace_scope_end();
    pub fn rmi_trace_instant(name: *const c_char);
    pub fn rmi_trace_counter_int(name: *const c_char, value: i64);
    pub fn rmi_trace_counter_double(name: *const c_char, value: f64);
    pub fn rmi_trace_is_active() -> bool;
}
